<resources>
    <string name="app_name">Hospital Management System</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_">Register</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="username">Username</string>
    <string name="cell_phone">Cell Phone :</string>
    <string name="specialization">Specialization :</string>

    <string-array name="sort">
        <item>All</item>
        <item>Past</item>
        <item>Upcoming</item>
        <item>Today</item>
    </string-array>
    <string-array name="order">
        <item>All</item>
        <item>Past</item>
        <item>Upcoming</item>
        <item>Today</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employee_id">Employee Id :</string>
    <string name="doctor_identity">Doctor Identity :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="office">Office</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
</resources>