<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminDoctorEditActivity"
    android:background="#D4E1E3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="0dp"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/doctor"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/employee_id" />

            <TextView
                android:id="@+id/textViewEmployeeId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/doctor_identity" />

            <TextView
                android:id="@+id/textViewIDNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="#000000"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            app:helperText="required"
            app:errorTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile"
                android:hint="@string/first_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            app:helperText="required"
            app:errorTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile"
                android:hint="@string/last_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            app:helperText="required"
            app:counterMaxLength="10"
            app:counterEnabled="true"
            app:errorTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/officeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            app:helperText="required"
            app:errorTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextOffice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_office"
                android:hint="@string/office"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            app:helperText="required"
            app:errorTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_home"
                android:hint="@string/address"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            app:helperText="required"
            app:errorTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>