<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#D4E1E3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WELCOME BACK"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/welcome" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click here to Login By Biometric"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="Patient" />

        <RadioButton
            android:id="@+id/radioAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="Admin" />

        <RadioButton
            android:id="@+id/radioDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="Doctor" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#000"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:hintTextAppearance="@color/design_default_color_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_number"
            android:hint="ID Number"
            android:inputType="number"
            android:minHeight="48dp"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#000"
        android:theme="@style/TextInputLayoutStyle"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:hintTextAppearance="@color/design_default_color_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="#037180">
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="#037180"/>
    </LinearLayout>


</LinearLayout>